--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ description: >-                        # used by seo meta and the atom feed
   and focuses on text presentation.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'www.robinreni.blog'
 
 github:
   username: robinreni96        # change to your github username
