added web description

--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,7 @@ title: Robin Reni                        # the main title
 tagline: Full-Stack AI Engineer  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, portfolio, sidebar,
-  bootstrap Jekyll theme with responsive web design
-  and focuses on text presentation.
+  Hello World 🌍, I'm Robin Reni. A Passionate Full Stack AI Engineer building AI enabled Software Application.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'www.robinreni.blog'
