Google Analytics ID Change

--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ google_site_verification: google_meta_tag_verification # change to your verifica
 
 
 google_analytics:
-  id: 'UA-158399666-1'         # fill in your Google Analytics ID
+  id: 'G-9JPVPBEF64'         # fill in your Google Analytics ID
   # Google Analytics pageviews report settings
   pv:
     proxy_endpoint:   # fill in the Google Analytics superProxy endpoint of Google App Engine
